# binson-c-light

./: .clang-format  .codecov.yml  .eqc_ci  .gitignore  .travis.yml  AUTHORS  CMakeLists.txt  Makefile  README.md  binson.cpp  binson.hpp  binson_defines.h  binson_light.c  binson_light.h  binson_light.i  binson_light_examples.c  binson_light_test.c  binson_light_test_stream.c  binson_light_test_stream.h  binson_light_to_string.c  binson_light_to_string.h  binson_light_to_string_examples.c  binson_parser.c  binson_parser.h  binson_writer.c  binson_writer.h  bug_14.c  bug_14_2.c  bug_15.c  bug_20.c  bug_22.c  bug_26.c  bug_28.c  bug_6.c  build.sh  burn_example.sh  burn_test.sh  debug-san.sh  dry-run.sh  project.md  (+5 more)
.github/workflows/: build-and-test.yml  cppcheck.yml
api/: README.md  binson_light.i  binson_light_php.i
cmake/: coverage.cmake
examples/: CMakeLists.txt  class.cpp  parser.c  writer.c
fuzz-test/: CMakeLists.txt  enable.sh  fuzz.sh  fuzz_binson.c  fuzz_class.cpp  fuzz_defined.c  fuzz_goinoutarr.c  fuzz_goinoutobj.c  fuzz_new.sh  fuzz_parser_verify.c  fuzz_to_string.c  fuzz_verify_array.c  generate_test_data.sh  main_entry.c  main_entry.cpp  verify_with_binson_java.sh
fuzz-test/fuzz-docker/: Dockerfile  build.sh  run.sh
fuzz-test/input/fuzz_goinoutarr/: 001
fuzz-test/input/fuzz_parser_verify/: 002  003
include/: binson.hpp  binson_defines.h  binson_parser.h  binson_writer.h
old/: binson_light.c  binson_light.h  binson_light_examples.c
src/: CMakeLists.txt  binson.cpp  binson_parser.c
test/fuzz/binson/: Makefile  binson.c  binson.dict  test_fuzzer.c
test/fuzz/binson/cases/fixed/: id:000004,sig:11,src:000000,op:havoc,rep:64  id:000008,sig:11,src:000004,op:havoc,rep:4  id:000014,src:000000,op:havoc,rep:16  id:000020,sig:11,src:000023,op:havoc,rep:32  id:000022,sig:11,src:000023,op:havoc,rep:128  id:000023,sig:11,src:000023,op:havoc,rep:64  id:000026,sig:11,src:000023,op:havoc,rep:4  id:000026,src:000000,op:havoc,rep:32  id:000029,src:000004,op:flip1,pos:6  id:000030,src:000004,op:havoc,rep:2  id:000033,sig:11,src:000178,op:havoc,rep:128  id:000037,sig:11,src:000238,op:havoc,rep:8  id:000038,sig:11,src:000238,op:havoc,rep:32  id:000041,sig:11,src:000263,op:havoc,rep:16  (+3 more)
test/fuzz/binson/input/: binson_001  binson_006  binson_007  id:000004,src:000046,op:havoc,rep:16  id:000008,src:000074+000022,op:splice,rep:4  id:000011,src:000165,op:flip1,pos:63  id:000012,src:000165+000060,op:splice,rep:16  id:000013,src:000159,op:havoc,rep:2
test/pyfuzz/: Makefile  README.md  pyfuzz.py
test/quickcheck/: binson_def.hrl  binson_light.hrl  binson_writer_eqc.erl
test/quickcheck/ebin/: Emakefile
utest/: CMakeLists.txt  Tis.mk  binson_class_test.cpp  binson_depth_test.c  binson_parser_array_test.c  binson_parser_bad_test.c  binson_parser_print_test.c  binson_parser_ref_test.c  binson_parser_test.c  binson_parser_verify_test.c  binson_writer_test.c  simple_tests.c  utest.h
utest/generated_test_cases/parser/: p_005a77a10338cd12aed7cdfc6412f7e9.c  p_024eccfd349454b409547c105442bfa9.c  p_03db255c6bd35c410743ef67b1fdc76d.c  p_041af75705e8e36e0cd07d2879fcfbd1.c  p_0637f5882a65a1518ff3ec736068c71b.c  p_07b2aee18e63ee25fe2acb9191ffb5a4.c  p_0bb338ed180c1b788f3c8c75b1553346.c  p_0d56971faeace677430df96e6fe6dec5.c  p_0f2fb148013822f5d1777ce21ee6d8ec.c  p_12ad4bf6d9ec9029724113552b7fbed9.c  p_1495ee5f9399767ab1d0a4ce6e657c11.c  p_1661a5d5e99e706d3efee5811b406263.c  p_17f43bee21f4088be0e5a5be12b8db22.c  p_1802a4cab9a4d089ba12e9c8f701a715.c  p_18fb55bcda96fd7fc5de3250426365d9.c  p_1b685775484aae00db2354fd59bd5013.c  p_1b7d2e084ae07042134bf8ece40d51a7.c  p_1d0a9c521f073ed5aa5a1ac8f326e620.c  p_2112d47d0dd9acb0cdca73fedd41eb5b.c  p_223f6613a822b4735e21ae669b687b9b.c  p_2548b9fdd097d50dcdb2f961341d0925.c  p_26194ecfd5c5659d497afc070dfd421c.c  p_2770d6b45a48a2bd212fd4d3237b7549.c  p_277dc313e97a8111841ce179d0dc257e.c  p_2825adb0330c57bd4b20efc7020f6587.c  p_288e62c8be8ff7552a9b6d1b1e6df017.c  p_2891dd8aa652b36235f43de921f95a55.c  p_2bff4085459dd5425318a21a2486f86c.c  p_2e7708df198e8abbea74aa51d13595b5.c  p_2e79023ce28be4caa844c0f96d1536dc.c  p_304116b25e9a621bcac4565b2625080b.c  p_306ed4e18d8e3b82b65c8a5816c467ee.c  p_31d01f6b8c78f9786db591b614f713bd.c  p_323e68ab24539a663244c8d4b8b5cb4a.c  p_327a4b845fac8479a7bbb0f2afd34fbe.c  p_32a0855ae11318b20d18b33aedc8fdc2.c  p_32b74dd0a00bb71427d025d37fedf33b.c  p_33c3c88f32ea049b4a8b7c9e25bce732.c  p_34095b49c859a10f520d96ae66ddef1d.c  p_3629399559a6183165f19aac85a5d63a.c  (+154 more)
utest/generated_test_cases/writer/: w_005a77a10338cd12aed7cdfc6412f7e9.c  w_024eccfd349454b409547c105442bfa9.c  w_03db255c6bd35c410743ef67b1fdc76d.c  w_041af75705e8e36e0cd07d2879fcfbd1.c  w_0637f5882a65a1518ff3ec736068c71b.c  w_07b2aee18e63ee25fe2acb9191ffb5a4.c  w_0bb338ed180c1b788f3c8c75b1553346.c  w_0d56971faeace677430df96e6fe6dec5.c  w_0f2fb148013822f5d1777ce21ee6d8ec.c  w_12ad4bf6d9ec9029724113552b7fbed9.c  w_1495ee5f9399767ab1d0a4ce6e657c11.c  w_1661a5d5e99e706d3efee5811b406263.c  w_17f43bee21f4088be0e5a5be12b8db22.c  w_1802a4cab9a4d089ba12e9c8f701a715.c  w_18fb55bcda96fd7fc5de3250426365d9.c  w_1b685775484aae00db2354fd59bd5013.c  w_1b7d2e084ae07042134bf8ece40d51a7.c  w_1d0a9c521f073ed5aa5a1ac8f326e620.c  w_2112d47d0dd9acb0cdca73fedd41eb5b.c  w_223f6613a822b4735e21ae669b687b9b.c  w_2548b9fdd097d50dcdb2f961341d0925.c  w_26194ecfd5c5659d497afc070dfd421c.c  w_2770d6b45a48a2bd212fd4d3237b7549.c  w_277dc313e97a8111841ce179d0dc257e.c  w_2825adb0330c57bd4b20efc7020f6587.c  w_288e62c8be8ff7552a9b6d1b1e6df017.c  w_2891dd8aa652b36235f43de921f95a55.c  w_2bff4085459dd5425318a21a2486f86c.c  w_2e7708df198e8abbea74aa51d13595b5.c  w_2e79023ce28be4caa844c0f96d1536dc.c  w_304116b25e9a621bcac4565b2625080b.c  w_306ed4e18d8e3b82b65c8a5816c467ee.c  w_31d01f6b8c78f9786db591b614f713bd.c  w_323e68ab24539a663244c8d4b8b5cb4a.c  w_327a4b845fac8479a7bbb0f2afd34fbe.c  w_32a0855ae11318b20d18b33aedc8fdc2.c  w_32b74dd0a00bb71427d025d37fedf33b.c  w_33c3c88f32ea049b4a8b7c9e25bce732.c  w_34095b49c859a10f520d96ae66ddef1d.c  w_3629399559a6183165f19aac85a5d63a.c  (+154 more)
utest/test_data/bad_objects/: crash.txt
